--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -3,10 +3,10 @@
 
 # gradebook service
 gradebook.url = http://localhost:8081
-gradebook.service = MQ
+gradebook.service = REST
 # registration service
 registration.url = http://localhost:8080
-registration.service = MQ
+registration.service = REST
 
 # database properties
  spring.datasource.url = jdbc:mysql://localhost:3306/register
